Algumas modificações - Programação da Simétrica Completa

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                     <h4>Substituição</h4>
                 </div>
             </a>
-            <a href="">
+            <a href="hash/hash.html">
                 <div class="cards">
-                    <h4><a href="hash/hash.html">HASH</a></h4>
+                    <h4>HASH</h4>
                 </div>
             </a>
-            <a href="">
+            <a href="simetrica/simetrica.html">
                 <div class="cards">
                     <h4>Simétrica</h4>
                 </div>
