--- a/substituicao/substituicao.html
+++ b/substituicao/substituicao.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="#" class="tip1" onclick="alterarDiv()" >INFO</a></li>
                     <li><a href="#" class="tip2" onmouseover="alternarMenu()" onclick="alterarDiv2()">CIFRAS</a></li>
-                    <li><a href="file:///C:/Users/POS%20H14BT58/Documents/projeto%20site/index.html" class="tip3" onmouseover="alternarMenu()" onclick="alterarDiv3()">HOME</a></li>
+                    <li><a href="../index.html" class="tip3" onmouseover="alternarMenu()" onclick="alterarDiv3()">HOME</a></li>
                 </ul>
             </div>
         </nav>
