--- a/hash/hash.html
+++ b/hash/hash.html
@@ -23,7 +23,7 @@
         <div class="inner">
           <h3 class="masthead-brand">HASH</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="/index.html">Home</a>
+            <a class="nav-link active" href="../index.html">Home</a>
             <a class="nav-link" href="#" onclick="ativarDivInfo()">Informações</a>
             <a class="nav-link" href="#" onclick="ativarDivCripto()">Criptografia</a>
           </nav>
