--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -79,7 +79,7 @@
     </main>
     <footer>
         <p style="text-align: center; font-size: 15pt;">© 2021-2022. Instituto Federal do Rio de Janeiro, Campus Arraial do Cabo e FAPERJ. Todos os direitos reservados.</p>
-        <div class="logo_img"> <img src="img/logofaperj.jpg" alt="Logo da Faperj"><img src="img/logoifrj.png" alt="" style="margin-left: 10px;"></div>
+        <div class="logo_img"> <img src="logo gov.png" alt="Logo Governo do Rio de Janeiro"> <img src="img/logofaperj.jpg" alt="Logo da Faperj"><img src="img/logoifrj.png" alt="" style="margin-left: 10px;"> <img src="logo jt.png" alt="Logo Jovens Talentos"> <img src="logo secti.jpg" alt="Logo SECTI"></div>
     </footer>
 </body>
 </html>
