--- a/simetrica/simetrica.html
+++ b/simetrica/simetrica.html
@@ -23,7 +23,7 @@
     <header class="bg-primary text-white p-3">
         <div class="px-4 py-5 my-5 text-center">
             <nav class="nav nav-masthead justify-content-lg-start">
-                <a href="../index.html" class="nav-link text-secondary">
+                <a href="../index.html" class="nav-link text-secondary text-white">
                     <img class="bi d-block mx-auto mb-1" width="24" src="house-door.svg" height="24">
                     Home
                   </a>
