--- a/substituicao/substituicao.html
+++ b/substituicao/substituicao.html
@@ -31,8 +31,8 @@
             <div>
                 <ul>
                     <li><a href="#" class="tip1" onclick="alterarDiv()" >INFO</a></li>
-                    <li><a href="#" class="tip2" onmouseover="alternarMenu()" onclick="alterarDiv2()">CIFRAS</a></li>
-                    <li><a href="../index.html" class="tip3" onmouseover="alternarMenu()" onclick="alterarDiv3()">HOME</a></li>
+                    <li><a href="#" class="tip2"  onclick="alterarDiv2()">CIFRAS</a></li>
+                    <li><a href="../index.html" class="tip3" onclick="alterarDiv3()">HOME</a></li>
                 </ul>
             </div>
         </nav>
@@ -58,41 +58,49 @@
             <div class="titu">
                 <h3 style="text-align: center; font-size: 34pt;"> EXPOSIÇÃO DE CONTEÚDOS</h3>
             </div>
+            <div>
+                <a href="Cifras Substituição.zip" id="download">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                        <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                        <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                      </svg>
+                </a>
+            </div>
             <div id="container">
-                <a href="transposicao/transposicao.html">
+                <a href="CifraCesar_Modificado.html">
                     <div class="cards"> 
                         <h4>CIFRA DE CÉSAR</h4>
                     </div>
                 </a>
-                <a href="substituicao/substituicao.html">
+                <a href="index - ROT13.html">
                     <div class="cards">
                         <h4>ROT13</h4>
                     </div>
                 </a>
-                <a href="">
+                <a href="index - ZENIT POLAR.html">
                     <div class="cards">
                         <h4>ZENIT POLAR</h4>
                     </div>
                 </a>
-                <a href="">
+                <a href="CifrasHebraicas.html">
                     <div class="cards">
                         <h4>HEBRAICAS</h4>
                     </div>
                 </a>
-                <a href="">
+                <a href="CifraMaçonica/index.html">
                     <div class="cards">
                         <h4>MAÇONICA</h4>
                     </div>
                 </a>
-                <a href="">
+                <a href="KamaSutra/KamaSutra.html">
                     <div class="cards">
                         <h4>KAMA SUTRA</h4>
                     </div>
                 </a>
                 
-                <a href="">
+                <a href="Cifra Playfair/Playfair-Cipher-master/playfair.html">
                     <div class="cards">
-                        <h4>VIGENÉRE</h4>
+                        <h4>PLAYFAIR</h4>
                     </div>
                 </a>
                 
