--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         .centr{
             margin-top: -10px;
         }
+        #ctds-img{
+            display: flex;
+            flex-wrap: nowrap;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +76,7 @@
                 <h2>Informações</h2>
                 <p>Criptografia é a arte de escrever em códigos ou cifras</p>
             </div>
-            <div style="text-align: center;">
+            <div style="text-align: center;" id="ctds-img">
                 <img src="img/criptografia-img.jpg" alt="" height="167"><img src="img/foto-ilustracao-computador.jpg" alt=""><img src="img/img-cripto.jpg" alt="" height="231">
             </div>
         </div>
