--- a/transposicao/transposicao.html
+++ b/transposicao/transposicao.html
@@ -13,7 +13,7 @@
         <h1 class="p-3">Transposição</h1>
     </div> -->
     <header>
-        <div class="collapse bg-dark" id="navbarHeader">
+        <div class=" bg-dark" id="navbarHeader">
           <div class="container">
             <div class="row">
               <div class="col-sm-8 col-md-7 py-4">
@@ -35,7 +35,7 @@
             <a href="#" class="navbar-brand d-flex align-items-center">
               <strong>Transposição</strong>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
