--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
             margin-top: -10px;
         }
         #ctds-img{
+            justify-content: center;
+            flex-direction: column;
             display: flex;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
+        }
+        a{
+            width: min-content;
+            height: min-content;
+            text-decoration: none;
+        }
+        footer{
+            display: block;
+            height: 100%;
         }
     </style>
 </head>
@@ -40,10 +51,11 @@
             <div class="titu">
                 <h3 style="text-align: center; font-size: 18pt;"> EXPOSIÇÃO DE CONTEÚDOS</h3>
             </div>
-            <a href="transposicao/transposicao.html">
-                <div class="cards"> 
-                    <h4>Transposição</h4>
-                </div>
+           <a href="transposicao/transposicao.html">
+                    <div class="cards">
+                        <h4>Transposição</h4>
+                    </div>
+           </a>
             </a>
             <a href="substituicao/substituicao.html">
                 <div class="cards">
@@ -60,7 +72,7 @@
                     <h4>Simétrica</h4>
                 </div>
             </a>
-            <a href="">
+            <a href="assimetrica/assimetrica.html">
                 <div class="cards">
                     <h4 class="centr">Implementação Futura: Assimétrica</h4>
                 </div>
@@ -77,7 +89,13 @@
                 <p>Criptografia é a arte de escrever em códigos ou cifras</p>
             </div>
             <div style="text-align: center;" id="ctds-img">
-                <img src="img/criptografia-img.jpg" alt="" height="167"><img src="img/foto-ilustracao-computador.jpg" alt=""><img src="img/img-cripto.jpg" alt="" height="231">
+                <div>
+                    <img src="img/criptografia-img.jpg" alt="" height="167" style="margin-right: -4px;">
+                    <img src="img/foto-ilustracao-computador.jpg" alt="">
+                </div>
+                    <div style="margin-top: -24px;">
+                        <img src="img/img-cripto.jpg" alt="" height="231">
+                    </div>
             </div>
         </div>
     </main>
