--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </a>
             <a href="assimetrica/assimetrica.html">
                 <div class="cards">
-                    <h4 class="centr">Implementação Futura: Assimétrica</h4>
+                    <h4 class="centr">Assimétrica</h4>
                 </div>
             </a>
             <a href="">
