Alterações na imagem

--- a/assimetrica/assimetrica.html
+++ b/assimetrica/assimetrica.html
@@ -15,9 +15,12 @@
 </head>
 <body>
     <div class="container-fluid bg-dark text-white d-flex p-5 justify-content-evenly">
-        <h1>Assimétrica</h1>
+        <div>
+            <h1>Assimétrica</h1>
+            <p>(em testes)</p>
+        </div>
         <a href="../index.html" class="nav-link text-secondary text-white">
-            <img class="bi d-block mx-auto mb-1" width="24" src="/simetrica/house-door.svg" height="24">
+            <img class="bi d-block mx-auto mb-1" width="24" src="house-door.svg" height="24">
             Home
           </a>
     </div>
@@ -76,8 +79,8 @@
                     <p class="results">Conhecida como criptografia de chave pública. Para funcionar, ela se baseia em dois tipos de chaves de segurança — uma privada e a outra pública. Com elas, o usuário pode cifrar os dados que ele vai enviar ainda checar a identidade de um usuário. </p>
                     <hr>
                     <h5>Decodificação e Codificação</h5>
-                    <p>A decodificação é feita por meio da xor entre a chave em binário e o resultado da codificação em binário. O resultado será novamente o texto descrito. <br> <em>Exemplo:</em> </p>
-                    <img src="imgAssimetrica.jpg" alt="">
+                    <div style="text-align: center;"><img src="imgAssimetrica.jpg" style="max-width: 35%; margin: auto;"></div>
+                    <p style="text-align: center;">Referência: <a href="https://www.gta.ufrj.br/grad/07_2/delio/Criptografiaassimtrica.html" target="external">PKI – Public key infrastructure - GTA/UFRJ</a> </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
