Responsividade Tela Principal

--- a/index.html
+++ b/index.html
@@ -35,6 +35,35 @@
             display: block;
             height: 100%;
         }
+        @media only screen and (max-width: 900px) {
+        /* For mobile phones: */
+        .titu{
+            width: 90vw;
+        }
+        #ctds-img{
+            flex-direction: column;
+            width: 100vw;
+            
+        }
+        #div_dir{
+            width: 100%;
+            
+        }
+        header{
+            width: 100vw;
+        }
+        #contra_cab{
+            width: 100vw;
+            display: block;
+        }
+        .cards{
+            width: 25vw;
+        }
+        #div_lef{
+            display: block;
+            width: 100vw;
+        }
+        }
     </style>
 </head>
 <body>
@@ -49,7 +78,7 @@
     <main>
         <div id="div_lef">
             <div class="titu">
-                <h3 style="text-align: center; font-size: 18pt;"> EXPOSIÇÃO DE CONTEÚDOS</h3>
+                <h3 style="text-align: center; font-size: 18pt;">EXPOSIÇÃO DE CONTEÚDOS</h3>
             </div>
            <a href="transposicao/transposicao.html">
                     <div class="cards">
