--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             display: block;
             height: 100%;
         }
-        @media only screen and (max-width: 1000px) {
-        /* For mobile phones: */
+        @media(max-width: 1000px) {
+     
         .titu{
             width: 90vw;
         }
